# ncs

./: .gitignore  CITATION.cff  LICENSE  README.md  SERVER_OFFLINE_GUIDE.md  environment.yml  pyproject.toml
colab/: README.md  run_af_multimer_colab.py
configs/: default.yaml
data/: gpcrdb_coupling_dataset.csv
data/kinase/: kinase_dataset.csv  kinase_processed.csv
docs/: API.md  TUTORIAL.md
leakageguard/: __init__.py  cli.py
leakageguard/data/: dataset.py
leakageguard/features/: bw_site.py  esm2.py
leakageguard/models/: __init__.py  classifiers.py
leakageguard/plotting/: __init__.py  nature_style.py
leakageguard/splits/: strategies.py
results/: benchmark_cv_20260226_125514.csv  benchmark_single_split_20260226_125514.csv  esm2_attention_20260226_120056.csv  esm2_attention_20260226_122015.csv  esm2_leakage_gradient_20260226_120056.csv  multilabel_cv_20260226_113959.csv  precog_input.fasta
results/alphafold_validation/: af_validation_results.csv  run_colabfold.sh
results/esm2_attention/: layer_enrichment.csv
results/kinase_generalization/: kinase_benchmark_results.csv
scripts/: fetch_gpcrdb_cache.py  generate_mock_af_data.py  leakage_test.py  prepare_precog.py  pymol_render.py  render_fig1_paradigm.py  render_figures.py  run_alphafold_validation.py  run_benchmark.py  run_esm2_attention.py  run_esm2_leakage.py  run_kinase_generalization.py  run_multilabel.py
se3_gnn_minimal/: README.md  environment.yml  requirements.txt  run_on_server.sh
se3_gnn_minimal/code/: 01_fetch_multispecies_gpcr.py  02_download_af2_structures.py  03_compute_esm2_embeddings.py  04_build_3d_graphs.py  07_run_training.py  analyze_results.py  contrastive_training.py  se3_gnn_model.py
se3_gnn_minimal/configs/: config.py
se3_gnn_minimal/results/: analysis_summary.json  se3_gnn_standard_history.json  (+11 more)
src/: __init__.py
tests/: test_smoke.py
(+105 files in other folders)
